# Whisperer

./: Cargo.toml  LICENSE  README.md  config.toml
src/: config.rs  crypt.rs  dict.rs  hash.rs  main.rs
whisperer/: Cargo.toml  config.toml
whisperer-cli/: Cargo.toml  README.md
whisperer-cli/src/: main.rs
whisperer-front-end-svelte-ts/: README.md  index.html  package.json  tsconfig.json
whisperer-front-end-svelte-ts/src/: App.svelte
whisperer-front-end-svelte-ts/src/components/: Count.svelte
whisperer-gui-svelte/: README.md  package.json
whisperer-gui-svelte/src/: App.svelte  style.css
whisperer-gui-svelte/src-tauri/: Cargo.toml  tauri.conf.json
whisperer-gui-svelte/src-tauri/src/: main.rs
whisperer-server/: Cargo.toml  README.md  server.toml
whisperer-server/src/: config.rs  main.rs  response.rs
whisperer-serverless-vercel/: .gitignore  README.md  vercel.json
whisperer-serverless-vercel/api/: Cargo.toml
whisperer-serverless-vercel/api/lib/: base_response.rs
whisperer-serverless-vercel/api/v1/: decode.rs  encode.rs
whisperer-serverless-vercel/lib/: api-example.toml  api.rs  lib.rs  response.rs  types.rs
whisperer-svelte-ts/: README.md  index.html  package-lock.json  package.json
whisperer-svelte-ts/src/: App.svelte
whisperer-svelte-ts/src-tauri/: Cargo.toml  tauri.conf.json
whisperer-svelte-ts/src-tauri/src/: main.rs
whisperer/src/: config.rs  config.toml  crypt.rs  hash.rs  lib.rs
