[package]
name = "whisperer-cli"
version = "0.0.2"
authors = ["Borber <borber.drum@gmail.com>"]
edition = "2021"
license = "GPL-3.0-or-later"
description = "将文本编码为简短的中文字符, 防和谐. CLI版本"
keywords = ["encode", "chinese"]
homepage = "https://github.com/Borber/whisperer"
repository = "https://github.com/Borber/whisperer"
include = ["/src/**/*", "/Cargo.toml", "/LICENSE", "/README.md"]
readme = "README.md"

[dependencies]
clap = { version = "4", features = ["derive"] }
whisperer = { path = "../whisperer", version = "0" }
