[package]
name = "whisperer-serverless-vercel"
version = "0.0.1"
authors = ["Borber <borber.drum@gmail.com>"]
edition = "2021"
license = "GPL-3.0-or-later"
description = "将文本编码为简短的中文字符, 防和谐 serverless vercel 版本"
keywords = ["encode", "chinese"]
homepage = "https://github.com/Borber/whisperer"
repository = "https://github.com/Borber/whisperer"
readme = "README.md"


[dependencies]
http = "0.1"
vercel_lambda = "*"
whisperer = "0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"

[lib]
name = "base_response"
path = "lib/base_response.rs"

[[bin]]
name = "encode"
path = "v1/encode.rs"

[[bin]]
name = "decode"
path = "v1/decode.rs"