[package]
name = "whisperer-serverless-vercel"
version = "0.0.1"
authors = ["Borber <borber.drum@gmail.com>"]
edition = "2021"
license = "GPL-3.0-or-later"
description = "将文本编码为简短的中文字符, 防和谐 serverless vercel 版本"
keywords = ["encode", "chinese"]
homepage = "https://github.com/Borber/whisperer"
repository = "https://github.com/Borber/whisperer"
readme = "README.md"


[dependencies]
base64 = "0.13.0"
whisperer = "0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
http-serde = "1.0"
toml = "0.5"
poem = "1.2"
tokio = "1.15.0"
lambda_runtime = "0.4"
mongodb = "2"
reqwest = { version = "0.11", features = ["json"] }

[lib]
name = "poem_vercel_lib"
path = "../lib/lib.rs"

[[bin]]
name = "encode"
path = "v1/encode.rs"

[[bin]]
name = "decode"
path = "v1/decode.rs"